--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Remove the old Java version properties
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    -->
+
   </properties>
 
   <dependencies>
@@ -47,7 +50,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>3.11.0</version> <!-- Ensure this version supports JDK 21-->
           <configuration>
                 <release>21</release> <!-- Sets the -release flag for Java 21 -->
             </configuration>
